--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "django (>=5.2,<6.0)",
-    "djangorestframework (>=3.16.0,<4.0.0)"
+    "djangorestframework (>=3.16.0,<4.0.0)",
+    "psycopg[binary] (>=3.2.6,<4.0.0)",
+    "django-jazzmin (>=3.0.1,<4.0.0)",
+    "django-debug-toolbar (>=5.1.0,<6.0.0)",
+    "drf-spectacular (>=0.28.0,<0.29.0)",
 ]
 
 
