--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,14 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.5"
+pytest-django = "^4.11.1"
+pytest-cov = "^6.1.0"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "company_crud_api.settings"
+python_files = ["tests.py", "test_*.py", "*_tests.py"]
+addopts = "--cov=. --cov-report=term-missing"
+
