refactor: improve Docker setup with entrypoint and migrations
- Added entrypoint.sh to handle DB waiting and automatic migrations
- Updated Dockerfile to use entrypoint script and collectstatic
- Cleaned up docker-compose.yml (removed `version`, refactored CMD)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,17 @@ version: "3.9"
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/app
     ports:
       - "8000:8000"
+    volumes:
+      - .:/app
+    env_file:
+      - .env
     depends_on:
       - db
+    environment:
+      DJANGO_SETTINGS_MODULE: company_crud_api.settings
+
 
   db:
     image: postgres:16
